<resources>
    <string name="app_name">QuizMe</string>
    <string name="login_button">Login</string>
    <string name="login_text">Please log in</string>
    <string name="invalid_login">Wrong username or password</string>
    <string name="signup_button">Sign up</string>
    <string name="signup_text">Please enter your information</string>
    <string name="invalid_signup">Please fill in all the fields</string>
    <string name="new_game_button">New Game</string>
    <string name="view_results_button">View Results</string>
    <string name="view_friend_list_button">View Friend List</string>
    <string name="category">Choose a category</string>
    <string name="start_game">Start Game</string>
    <string name="account">Already have an account?</string>
    <string name="loginHere">Login here!</string>
    <string name="answer">Answer</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="difficulty_level">Choose a difficulty level</string>
    <string name="login">Login</string>

    <string-array name="category_array">
        <item>Animals</item>
        <item>Food</item>
        <item>Movies</item>
        <item>Politics</item>
        <item>Sports</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="memorize">Memorize the answers to these questions</string>
    <string name="submit">Submit</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
