<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/login_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Username"
            android:labelFor="@id/editUsername" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"
            android:labelFor="@id/editPassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_valid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalid_login" />

</LinearLayout>