<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/newgame_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game_button" />

            <Button
                android:id="@+id/gameresults_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_results_button" />

            <Button
                android:id="@+id/friendlist_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_friend_list_button" />

        </LinearLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="84dp"
            android:layout_height="42dp"
            android:text="@string/login_button"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.559" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>